--- a/po/si.po
+++ b/po/si.po
@@ -1,21 +1,21 @@
-# Lojban translation for gtg
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# Sinhalese translation for gtg
+# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
 # This file is distributed under the same license as the gtg package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-12 11:40+0100\n"
-"PO-Revision-Date: 2009-12-05 13:56+0000\n"
-"Last-Translator: David Futcher <bobbocanfly@gmail.com>\n"
-"Language-Team: Lojban <jbo@li.org>\n"
+"PO-Revision-Date: 2010-02-23 14:53+0000\n"
+"Last-Translator: ජීවන්ත ලේකම්වසම් <trueorcrazy@gmail.com>\n"
+"Language-Team: Sinhalese <si@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2010-03-14 05:03+0000\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Launchpad-Export-Date: 2010-03-14 05:04+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskeditor/__init__.py:31 GTG/taskbrowser/__init__.py:36
@@ -73,7 +73,7 @@ msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:2 GTG/taskbrowser/taskbrowser.glade.h:13
 msgid "Delete"
-msgstr ""
+msgstr "මකන්න"
 
 #: GTG/taskeditor/taskeditor.glade.h:4
 msgid "Due for"
@@ -89,7 +89,7 @@ msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:7
 msgid "Later"
-msgstr ""
+msgstr "පසුව"
 
 #: GTG/taskeditor/taskeditor.glade.h:8
 msgid "Mark Done"
@@ -97,11 +97,11 @@ msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:9
 msgid "Now"
-msgstr ""
+msgstr "දැන්"
 
 #: GTG/taskeditor/taskeditor.glade.h:10
 msgid "Soon"
-msgstr ""
+msgstr "ලඟදීම"
 
 #: GTG/taskeditor/taskeditor.glade.h:11
 msgid "Starting on"
@@ -109,7 +109,7 @@ msgstr ""
 
 #: GTG/taskeditor/taskeditor.glade.h:12
 msgid "Task"
-msgstr ""
+msgstr "කාර්යය"
 
 #: GTG/taskeditor/editor.py:321
 #, python-format
@@ -458,15 +458,15 @@ msgstr ""
 
 #: GTG/tools/dates.py:51
 msgid "Tomorrow"
-msgstr ""
+msgstr "හෙට"
 
 #: GTG/tools/dates.py:53
 msgid "Today"
-msgstr ""
+msgstr "අද"
 
 #: GTG/tools/dates.py:55
 msgid "Yesterday"
-msgstr ""
+msgstr "ඊයේ"
 
 #: GTG/tools/dates.py:58
 #, python-format
@@ -484,15 +484,15 @@ msgstr[1] ""
 
 #: GTG/tools/dates.py:98 GTG/tools/dates.py:140
 msgid "now"
-msgstr "cabna"
+msgstr "දැන්"
 
 #: GTG/tools/dates.py:99 GTG/tools/dates.py:142
 msgid "soon"
-msgstr ""
+msgstr "ලඟදීම"
 
 #: GTG/tools/dates.py:100 GTG/tools/dates.py:144
 msgid "later"
-msgstr "na lirmau"
+msgstr "පසුව"
 
 #: GTG/taskbrowser/__init__.py:37
 msgid "Mark the selected task as done"
@@ -1059,3 +1059,15 @@ msgstr ""
 #: GTG/core/tagstore.py:59
 msgid "Tasks with no tags"
 msgstr ""
+
+#, python-format
+#~ msgid "In %s days"
+#~ msgstr "දින %sකින්"
+
+#, python-format
+#~ msgid "%s days ago"
+#~ msgstr "දින %sකට පෙර"
+
+#, python-format
+#~ msgid "%s days left"
+#~ msgstr "දින %sක් ඉතිරිව ඇත"
