--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-12 11:40+0100\n"
-"PO-Revision-Date: 2010-03-15 04:39+0000\n"
-"Last-Translator: Heling Yao <Unknown>\n"
+"PO-Revision-Date: 2010-03-15 10:21+0000\n"
+"Last-Translator: Eleanor Chen <chenyueg@gmail.com>\n"
 "Language-Team: Simplified Chinese <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2010-03-15 04:49+0000\n"
+"X-Launchpad-Export-Date: 2010-03-16 04:47+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskeditor/__init__.py:28 GTG/taskbrowser/__init__.py:32
@@ -77,7 +77,7 @@ msgstr "删除"
 
 #: GTG/taskeditor/taskeditor.glade.h:4
 msgid "Due for"
-msgstr ""
+msgstr "到期"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
@@ -105,7 +105,7 @@ msgstr "马上"
 
 #: GTG/taskeditor/taskeditor.glade.h:12
 msgid "Starting on"
-msgstr ""
+msgstr "开始"
 
 #: GTG/taskeditor/taskeditor.glade.h:13
 msgid "Task"
@@ -165,15 +165,15 @@ msgstr ""
 
 #: GTG/taskbrowser/taskbrowser.glade.h:5
 msgid "<b>Task Browser</b>"
-msgstr ""
+msgstr "<b>任务浏览器</b>"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "<b>Task Editor</b>"
-msgstr ""
+msgstr "<b>任务编辑器</b>"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "Active _Plugins:"
-msgstr ""
+msgstr "活动插件(_P)："
 
 #: GTG/taskbrowser/taskbrowser.glade.h:12
 msgid "Behaviour"
@@ -197,7 +197,7 @@ msgstr "插件"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:47
 msgid "Show task text preview"
-msgstr ""
+msgstr "显示任务文本预览"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "Start Getting Things GNOME! on every login"
@@ -218,7 +218,7 @@ msgstr "关于插件(_A)"
 #: GTG/taskbrowser/browser.py:1539
 msgid ""
 "Deleting a task cannot be undone, and will delete the following task: "
-msgstr ""
+msgstr "删除任务后无法撤销，并将删除下列任务： "
 
 #: GTG/taskbrowser/browser.py:1540
 msgid "Are you sure you want to delete this task?"
@@ -226,7 +226,7 @@ msgstr "您确定要删除此任务吗？"
 
 #: GTG/taskbrowser/browser.py:1541
 msgid "Keep selected task"
-msgstr ""
+msgstr "保留所选任务"
 
 #: GTG/taskbrowser/browser.py:1542
 msgid "Permanently remove task"
@@ -235,7 +235,7 @@ msgstr "永久删除任务"
 #: GTG/taskbrowser/browser.py:1544
 msgid ""
 "Deleting a task cannot be undone, and will delete the following tasks: "
-msgstr ""
+msgstr "删除任务后无法撤销，并将删除下列任务： "
 
 #: GTG/taskbrowser/browser.py:1545
 msgid "Are you sure you want to delete these tasks?"
@@ -243,7 +243,7 @@ msgstr "您确定要删除这些任务吗？"
 
 #: GTG/taskbrowser/browser.py:1546
 msgid "Keep selected tasks"
-msgstr ""
+msgstr "保留所选任务"
 
 #: GTG/taskbrowser/browser.py:1547
 msgid "Permanently remove tasks"
@@ -263,7 +263,7 @@ msgstr "下载任务列表..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:88
 msgid "Downloading..."
-msgstr ""
+msgstr "下载中..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:123
 msgid "Adding tasks to rtm.."
@@ -283,7 +283,7 @@ msgstr "从 gtg 删除任务..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:160
 msgid "Updating changed tasks.."
-msgstr ""
+msgstr "正在更新已改变的任务..."
 
 #: GTG/plugins/rtm_sync/syncEngine.py:185
 #: GTG/plugins/rtm_sync/syncEngine.py:190
@@ -374,7 +374,7 @@ msgstr "添加新任务(_N)"
 msgid ""
 "Tomboy/Gnote not found. Please install it or disable the Tomboy/Gnote plugin "
 "in GTG"
-msgstr ""
+msgstr "未找到 Tomboy 或 Gnote。请安装这些软件，或在 GTG 中禁用 Tomboy/Gnote 插件。"
 
 #: GTG/plugins/tomboy/tomboy.py:127
 msgid "Add Tomboy note"
@@ -456,7 +456,7 @@ msgstr "选择保存列表的位置"
 
 #: GTG/plugins/evolution_sync/evolutionSync.py:33
 msgid "Synchronize with Evolution"
-msgstr ""
+msgstr "和 Evolution 同步"
 
 #: GTG/tools/dates.py:51
 msgid "Tomorrow"
@@ -681,7 +681,7 @@ msgstr "重做"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:42
 msgid "Reset Color"
-msgstr ""
+msgstr "重置颜色"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:44
 msgid "T_oolbar"
