Launchpad automatic translations update.

--- a/po/gl.po
+++ b/po/gl.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-12 11:40+0100\n"
-"PO-Revision-Date: 2010-03-16 12:38+0000\n"
+"PO-Revision-Date: 2010-03-17 15:54+0000\n"
 "Last-Translator: Francisco Diéguez <Unknown>\n"
 "Language-Team: Galego <g11n@mancomun.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-03-17 04:41+0000\n"
+"X-Launchpad-Export-Date: 2010-03-18 04:36+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: gl\n"
 
@@ -983,6 +983,32 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Unha etiqueta é unha simple palabra que comeza con &quot;@&quot;.\n"
+"\n"
+"Tente escribir unha palabra que comece con @ aquí:\n"
+"\n"
+"Se se convirte en amarela, é unha etiqueta.\n"
+"\n"
+"As etiquetas son útiles para ordenar as súas tarefas. No menú Ver, vostede "
+"pode activar a barra lateral que mostre todas as etiquetas que está usando "
+"polo que pode ver  de forma sinxela as tarefas para unha etiqueta dada. Non "
+"hai límite no número de etiquetas que unha tarefa pode ter.\n"
+"\n"
+"Vostede pode arrastrar e soltar unha etiqueta dentro de outra para crear "
+"\"subtarefas\". Como exemplo, se arrastra a etiqueta @para_pagar dentro da "
+"etiqueta @diñeiro, cada tarefa coa etiqueta @para_pagar tamén aparecerán na "
+"vista de @diñeiro (pero non  se engade a etiqueta @diñeiro á tarefa).\n"
+"\n"
+"Se preme co botón dereito sobre unha etiqueta na barra lateral pode tamén "
+"estabelecer a súa cor. Permitiralle ter unha lista de tarefas multicor, se o "
+"quere dese xeito.\n"
+"\n"
+"Só se engade unha nova etiqueta á tarefa actual. Non recursión e a etiqueta "
+"non se aplica ás subtarefas. Pero cando crea unha nova subtarefa, esta pode "
+"herdar as etiquetas dos seus pais como valor predefinido (tamén pode ser o "
+"caso se vostede engade unha etiqueta áo pai xusto despois de crear unha "
+"subtarefa). Por suposto, vostede pode modificar calquera tipo de etiquetas a "
+"esta subtarefa en particular. Nunca será cambiada polo seu pai."
 
 #: GTG/core/firstrun_tasks.py:70
 msgid "Learn how to use the Workview"
@@ -1008,6 +1034,24 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Se preme no botón &quot;Vista de traballa&quot; só se mostrarán as tarefas "
+"accionábeis.\n"
+"\n"
+"Que é unha tarefa accionábel? É unha tarefa que pode facer directamente, "
+"agora mesmo.\n"
+"\n"
+"É unha tarefa que é &quot;inicábel&quot; p.ex a data de comezo xa chegou.\n"
+"\n"
+"É unha tarefa que non ten subtarefas abertas, p.ex. vostede pode facer a "
+"tarefa en sí mesma directamente.\n"
+"\n"
+"Debido a isto, a vista de traballo só mostrará as tarefas que debería facer "
+"agora mesmo.\n"
+"\n"
+"Se usa etiquetas, vostede pode premer co botón dereito nunha etiqueta e "
+"seleccionar para ocultar as tarefas asignadas a esta etiqueta en particular "
+"na vista de traballo. É útil se ten unha etiqueta &quot;algún-dia&quot; que "
+"usa para as tarefas que quixera facer pero non son particularmente urxentes."
 
 #: GTG/core/firstrun_tasks.py:87
 msgid "Learn how to use Plugins"
@@ -1049,6 +1093,17 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG aínda está nunha versión alfta. Gústanos e usamolo diariamente pero pode "
+"conter algún erro.\n"
+"\n"
+"Infórmenos na nosa páxina de Launchpad:\n"
+"https://bugs.launchpad.net/gtg\n"
+"\n"
+"Queremos facer este software moito mellor, polo que calquera contribución ou "
+"idea é benvida.\n"
+"\n"
+"Se ten calquera problema usando GTG, nós podemos axudalo ou solucionarlle o "
+"seu problema realmente rápido."
 
 #: GTG/core/firstrun_tasks.py:112
 msgid "Learn how to use the QuickAdd Entry"
