--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-12 11:40+0100\n"
-"PO-Revision-Date: 2010-03-15 10:21+0000\n"
+"PO-Revision-Date: 2010-03-19 05:05+0000\n"
 "Last-Translator: Eleanor Chen <chenyueg@gmail.com>\n"
 "Language-Team: Simplified Chinese <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2010-03-16 04:47+0000\n"
+"X-Launchpad-Export-Date: 2010-03-19 07:51+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/taskeditor/__init__.py:28 GTG/taskbrowser/__init__.py:32
@@ -157,7 +157,7 @@ msgstr "确定删除任务"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:3
 msgid "<b>Dependencies</b>"
-msgstr ""
+msgstr "<b>依赖关系</b>"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:4
 msgid "<b>General</b>"
@@ -201,7 +201,7 @@ msgstr "显示任务文本预览"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "Start Getting Things GNOME! on every login"
-msgstr ""
+msgstr "每次登录自动运行 Getting Things GNOME!"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
 msgid "Storage"
@@ -209,7 +209,7 @@ msgstr "存储"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:54
 msgid "Task _Backends:"
-msgstr ""
+msgstr "任务后端(_B)："
 
 #: GTG/taskbrowser/taskbrowser.glade.h:52
 msgid "_About Plugin"
@@ -1029,7 +1029,7 @@ msgstr ""
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
-msgstr ""
+msgstr "已具备运行此插件的所有条件。"
 
 #: GTG/core/plugins/__init__.py:33
 msgid "The plugin can not be loaded"
