--- a/po/gl.po
+++ b/po/gl.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-12 11:40+0100\n"
-"PO-Revision-Date: 2010-03-17 15:54+0000\n"
-"Last-Translator: Francisco Diéguez <Unknown>\n"
+"PO-Revision-Date: 2010-03-22 07:27+0000\n"
+"Last-Translator: Luca Invernizzi <invernizzi.l@gmail.com>\n"
 "Language-Team: Galego <g11n@mancomun.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-03-18 04:36+0000\n"
+"X-Launchpad-Export-Date: 2010-03-23 04:47+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: gl\n"
 
