--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,7 @@ For 0.2.2:
 For 0.2.4:
 ----------
 * David Planella <david.planella@jabber.org>
+* Ronan Jouchet <ronan@jouchet.fr>
 
 For 0.3:
 ----------
