--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+????-??-?? Getting Things GNOME! ?.?.?
+    * Added link to web documentation in Help menu, by Ronan Jouchet
+
 2010-03-01 Getting Things GNOME! 0.2.2
     * Autostart on login, by Luca Invernizzi
     * Preferences dialog, by Paul Kishimoto
