--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-08 13:14+0000\n"
-"Last-Translator: joe <Unknown>\n"
+"PO-Revision-Date: 2010-04-11 21:42+0000\n"
+"Last-Translator: Jan-Christoph Borchardt <jan@inquata.com>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-04-09 03:56+0000\n"
+"X-Launchpad-Export-Date: 2010-04-12 03:54+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -108,7 +108,7 @@ msgstr "Ein Fehler ist aufgetreten"
 
 #: GTG/tools/gtkcrashhandler.py:177
 msgid "It looks like an error has occurred."
-msgstr ""
+msgstr "Offensichtlich ist ein Fehler aufgetreten."
 
 #: GTG/tools/gtkcrashhandler.py:212
 msgid "_Details"
@@ -561,6 +561,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" ist abgestürzt. Bitte schreiben Sie einen Fehlerbericht auf <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">unserer Launchpad-Seite</a>. "
+"Wenn Sie Apport installiert haben, wird dies für Sie gestartet."
 
 #: GTG/core/task.py:53
 msgid "My new task"
@@ -730,7 +733,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:106
 msgid "Learn how to use the QuickAdd Entry"
-msgstr ""
+msgstr "Lernen Sie, das QuickAdd-Eingabesystem zu benutzen"
 
 #: GTG/core/firstrun_tasks.py:107
 msgid ""
